# foxbrain-faos

./: .dockerignore  .env.example  .env.production  .gitignore  AI_BACKUP_EXECUTION_PLAN.md  AI_BACKUP_EXECUTION_SCRIPT.md  AI_COMPANION_REPORT.md  AI_CONTROL_PLANE_SUITABILITY_REPORT.md  AI_ENTERPRISE_PLATFORM_V1_BUILD_REPORT.md  AI_GENESIS_ALIGNMENT_PLAN.md  AI_GENESIS_CANDIDATE_BUILD_REPORT.md  AI_GENESIS_CANDIDATE_VALIDATION_REPORT.md  AI_GENESIS_IMPLEMENTATION_PLAN.md  AI_GENESIS_RELEASE_BUILD_PLAN.md  AI_GENESIS_RELEASE_CANDIDATE_PLAN.md  AI_NATIVE_INTERACTION_DESIGN.md  AI_OPERATION_CENTER_V1_BUILD_REPORT.md  AI_OS_V4_ARCHITECTURE.md  AI_OS_V4_DEPLOYMENT_FLOW.md  AI_OS_V4_DEPLOYMENT_GUIDE.md  AI_OS_V4_DEPLOYMENT_REPORT.md  AI_OS_V4_HEALTH_API.md  AI_OS_V4_HEALTH_REPORT.md  AI_OS_V4_OBSERVABILITY.md  AI_OS_V4_PRODUCTION_REPORT.md  AI_OS_V4_RELEASE.md  AI_OS_V4_RELEASE_CERTIFICATE.md  AI_OS_V4_RUNTIME_REPORT.md  AI_OS_V4_SECURITY_REPORT.md  AI_OS_V4_TEST.md  AI_OS_V4_USER_ACCEPTANCE.md  AI_OS_V4_VERIFICATION_GUIDE.md  AI_OS_V4_VERSION_MANAGEMENT.md  AI_OS_V5.1_ARCHITECTURE.md  AI_OS_V5_ARCHITECTURE.md  AI_OS_V5_AUTOMATION_REPORT.md  AI_OS_V5_HEALTH_REPORT.md  AI_OS_V5_PRODUCTION_REPORT.md  AI_OS_V5_RELEASE.md  AI_OS_V5_RELEASE_CERTIFICATE.md  (+462 more)
VAFOX-Control/: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
VAFOX-Control/agents/templates/: VAFOX_CEO_AGENT_SPEC.md  (+9 more)
VAFOX-Control/docs/: API.md  DEPLOYMENT.md
VAFOX-Control/reports/: VAFOX_ORCHESTRATOR_BUSINESS_LAYER_INTEGRATION_TEST_REPORT.md
VAFOX-Control/tests/: test_api.py
(+628 files in other folders)
