[project]
name = "vafox-control-plane"
version = "0.1.0"
description = "Offline-first V1 architecture scaffold for control.vafox.com"
requires-python = ">=3.11"
dependencies = ["fastapi>=0.115,<1.0", "uvicorn[standard]>=0.30,<1.0", "pydantic>=2.7,<3.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0,<9.0", "httpx>=0.27,<1.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["apps/api"]
